@@ -44,7 +44,7 @@ let init_path ?(dir="") native =
 let open_implicit_module m env =
   let open Asttypes in
   let lid = {loc = Location.in_file "command line";
-             txt = Longident.Lident m } in
+             txt = Longident.parse m } in
   snd (Typemod.type_open_ Override env lid.loc lid)
 
 let initial_env () =
